--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
     "@sap/xssec": "^3",
     "express": "^4",
+    "mbt": "^1.2.27",
     "passport": "^0.7.0"
   },
   "devDependencies": {
